--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/node": "^22.14.0",
     "lil-gui": "^0.20.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.175.0"
   }
 }
