--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@dimforge/rapier3d": "^0.15.1",
     "@types/three": "^0.175.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
@@ -18,6 +19,7 @@
     "@types/node": "^22.14.0",
     "lil-gui": "^0.20.0",
     "socket.io-client": "^4.8.1",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
