--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@dimforge/rapier3d": "^0.15.1",
+    "@types/cannon": "^0.1.13",
     "@types/three": "^0.175.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
@@ -17,6 +18,7 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
     "@types/node": "^22.14.0",
+    "cannon": "^0.6.2",
     "lil-gui": "^0.20.0",
     "socket.io-client": "^4.8.1",
     "three": "^0.175.0",
